--- a/src/components/banner/Banner.module.scss
+++ b/src/components/banner/Banner.module.scss
@@ -1,29 +1,31 @@
-.container {
-    position: relative;
-    width: fit-content;
-    margin: 0 auto;
-    box-sizing: border-box;
+@import "../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        border-radius: 6px;
-        overflow: hidden;
-        height: 210px;
-    }
+.container {
+  position: relative;
+  width: fit-content;
+  margin: 0 auto;
+  box-sizing: border-box;
+
+  @media (max-width: 768px) {
+    border-radius: 6px;
+    overflow: hidden;
+    height: 210px;
+  }
 }
 
-.button {  
-    position: absolute;
-    right: 24px;
-    bottom: 28px;
-    @media (max-width: 768px) {
-        left: 15px;
-        top: 72px;
-    }
+.button {
+  position: absolute;
+  right: vw-1490(24);
+  bottom: vw-1490(28);
+  @media (max-width: 768px) {
+    left: 15px;
+    top: 72px;
+  }
 }
 .image {
-    object-fit: cover;
-    border-radius: 6px;
-    @media (max-width: 768px) {
-        object-position: left;
-    }
+  object-fit: cover;
+  border-radius: 6px;
+  @media (max-width: 768px) {
+    object-position: left;
+  }
 }
