--- a/src/components/business-banner/BusinessBanner.module.scss
+++ b/src/components/business-banner/BusinessBanner.module.scss
@@ -1,71 +1,75 @@
+@import "../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    text-align: center;
-    @media (max-width: 768px) {
-    }
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(32);
+  text-align: center;
+  @media (max-width: 768px) {
+  }
 }
 
 .imageContainer {
-    position: relative;
-    width: 1296px;
-    height: 496px;
-    padding: 48px;
-    box-sizing: border-box;
+  position: relative;
+  width: vw-1490(1296);
+  height: vw-1490(496);
+  padding: vw-1490(48);
+  box-sizing: border-box;
 
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 
-    border-radius: 6px;
-    overflow: hidden;
+  border-radius: 6px;
+  overflow: hidden;
+  & > h4 {
+    margin: vw-1490(29) 0 vw-1490(16);
+  }
+  & > p {
+    margin-bottom: vw-1490(8);
+  }
+  & > h4,
+  p {
+    color: var(--color-bg);
+    width: vw-1490(612);
+    text-align: start;
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    height: 518px;
+    padding: 24px 16px;
+    background-color: #00000099;
     & > h4 {
-        margin: 29px 0 16px;
+      margin: 28px 0 16px;
+      line-height: 21px;
     }
     & > p {
-        margin-bottom: 8px;
+      margin-bottom: 2px;
+      line-height: 22.4px;
     }
-    & > h4,p {
-        color: var(--color-bg);
-        width: 612px;
-        text-align: start;
+    & > h4,
+    p {
+      color: var(--color-bg);
+      width: 100%;
+      text-align: start;
     }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        height: 518px;
-        padding: 24px 16px;    
-        background-color: #00000099;
-        & > h4 {
-            margin: 28px 0 16px;
-            line-height: 21px;
-        }
-        & > p {
-            margin-bottom: 2px;
-            line-height: 22.4px;
-        }
-        & > h4,p {
-            color: var(--color-bg);
-            width: 100%;
-            text-align: start;
-        }
-    }
+  }
 }
 
 .image {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    transform: scaleX(-1);
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  transform: scaleX(-1);
 
-    width:1296px;
-    height:496px;
+  width: vw-1490(1296);
+  height: vw-1490(496);
 
-    @media (max-width: 768px) {
-        width:336px;
-        height:518px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    height: 518px;
+  }
 }
