--- a/src/components/catalog-popup/CatalogPopup.module.scss
+++ b/src/components/catalog-popup/CatalogPopup.module.scss
@@ -1,17 +1,19 @@
-.content {
-    position: absolute;
-    top: 76px;
-    left: 0;
-    z-index: 1000;   
+@import "../../shared/styles/functions";
 
-    animation: fadeIn 0.3s ease-out;
+.content {
+  position: absolute;
+  top: vw-1490(76);
+  left: 0;
+  z-index: 1000;
+
+  animation: fadeIn 0.3s ease-out;
 }
 
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
