--- a/src/components/company-contacts/CompanyContacts.module.scss
+++ b/src/components/company-contacts/CompanyContacts.module.scss
@@ -1,83 +1,91 @@
+@import "../../shared/styles/functions";
+
 .main {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(32);
 
-    & > h2 {
-        text-align: center;
-    }
+  & > h2 {
+    text-align: center;
+  }
 
-    @media (max-width: 768px) {
-        gap: 24px;
-    }
+  @media (max-width: 768px) {
+    gap: 24px;
+  }
 }
 .primary {
-    display: flex;
-    gap: 24px;
-    @media (max-width: 768px) {
-        flex-direction: column-reverse;
-    }
-}
-.secondary{
-    display: flex;
+  display: flex;
+  gap: vw-1490(24);
+  @media (max-width: 768px) {
     flex-direction: column-reverse;
-    gap: 32px;
-    width: 100%;
-    height: 719px;
+  }
+}
+.secondary {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: vw-1490(32);
+  width: 100%;
+  height: vw-1490(719);
 }
 
 .map {
-    height: 478px;
-    width: 100%;
-    border-radius: 6px;
+  height: vw-1490(478);
+  width: 100%;
+  border-radius: 6px;
+  overflow: hidden;
+  @media (max-width: 768px) {
+    height: 220px;
+    width: 336px;
     overflow: hidden;
-    @media (max-width: 768px) {
-        height: 220px;
-        width: 336px;
-        overflow: hidden;
-    }
+  }
 }
 
 .cardsContainer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, max-content);
-    gap: 24px;
-    place-content: center;
-    justify-content: center; /* Центрирует элементы по горизонтали */
-    align-content: center; /* Центрирует элементы по вертикали */
-    
-    @media (max-width: 768px) {
-        grid-template-columns: repeat(1, max-content);
-    }
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  gap: vw-1490(24);
+  place-content: center;
+  justify-content: center;
+  align-content: center;
+
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(1, max-content);
+  }
 }
 
 .inline {
-    display: flex;
+  display: flex;
 }
 .card {
-    box-sizing: border-box;
-    padding: 32px 24px;
-    width: 306px;
-    height: 227px;
-    flex-shrink: 0;
-    border-radius: 6px;
-    background-color: var(--color-bg);
-    box-shadow: 6px 12px 13px 0px #2225310A;
+  box-sizing: border-box;
+  padding: vw-1490(32) vw-1490(24);
+  width: vw-1490(306);
+  height: vw-1490(227);
+  flex-shrink: 0;
+  border-radius: 6px;
+  background-color: var(--color-bg);
+  box-shadow: 6px 12px 13px 0px #2225310a;
 
-    & > svg {
-        color: var(--color-accent-orange);
-        margin-bottom: 20px;
-    }
-
-    & > p {
-        color: var(--color-grey-2);
-        margin-bottom: 8px;
-    }
-
+  & > svg {
+    color: var(--color-accent-orange);
+    margin-bottom: vw-1490(20);
+    width: vw-1490(48);
+    height: vw-1490(48);
     @media (max-width: 768px) {
-        width: 336px;
-        height: fit-content;
-        padding: 24px 16px;
+      width: 48px;
+      height: 48px;
     }
+  }
+
+  & > p {
+    color: var(--color-grey-2);
+    margin-bottom: vw-1490(8);
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    height: fit-content;
+    padding: 24px 16px;
+  }
 }
