--- a/src/components/discount/Discount.module.scss
+++ b/src/components/discount/Discount.module.scss
@@ -1,40 +1,46 @@
+@import "../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: fit-content;
-    @media (max-width: 768px) {
-        gap: 12px;
-    }
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(20);
+
+  position: relative;
+  width: vw-1490(636);
+  height: vw-1490(260);
+
+  @media (max-width: 768px) {
+    gap: 12px;
+  }
 }
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 12px;
-    
-    & > h3{
-        @media (max-width: 768px) {
-            text-align: left;
-            font-size: 19px;
-            font-weight: 500;
-            line-height: 26.6px;    
-        }
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: vw-1490(12);
+
+  & > h3 {
     @media (max-width: 768px) {
-        gap: 8px;
+      text-align: left;
+      font-size: 19px;
+      font-weight: 500;
+      line-height: 26.6px;
     }
+  }
+  @media (max-width: 768px) {
+    gap: 8px;
+  }
 }
 .data {
-    display: inline;
-    padding: 4px 8px;
-    border-radius: 4px;
-    background-color: var(--color-accent-orange);
-    color: var(--color-bg);
+  display: inline;
+  padding: vw-1490(4) vw-1490(8);
+  border-radius: 4px;
+  background-color: var(--color-accent-orange);
+  color: var(--color-bg);
 }
 
 .image {
-    border-radius: 6px;
-    // object-fit: cover;
-    // object-fit: contain;
+  border-radius: 6px;
+  // object-fit: cover;
+  // object-fit: contain;
 }
