--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,11 +1,13 @@
+@import "../../shared/styles/functions";
+
 .wrapper {
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    width: 100%;
-    height: 229px;
+  width: 100%;
+  height: vw-1490(229);
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: vw-1490(16);
 }
