--- a/src/components/header/header-navigation/HeaderNavigation.module.scss
+++ b/src/components/header/header-navigation/HeaderNavigation.module.scss
@@ -1,70 +1,72 @@
+@import "../../../shared/styles/functions";
+
 .header {
-    box-sizing: border-box;
-    width: 100%;
-    height: 57px;
+  box-sizing: border-box;
+  width: 100%;
+  height: vw-1490(57);
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    background-color: var(--color-grey-1);
+  background-color: var(--color-grey-1);
 }
 .headerContainer {
-    width: 1296px;
-    height: 100%;
+  width: vw-1490(1296);
+  height: 100%;
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .navigate {
-    display: flex;
-    align-items: center;
-    gap: 36px;
-    & > a {
-        text-wrap: nowrap;
-        &:hover {
-            color: var(--color-accent-orange);
-        }
+  display: flex;
+  align-items: center;
+  gap: vw-1490(36);
+  & > a {
+    text-wrap: nowrap;
+    &:hover {
+      color: var(--color-accent-orange);
     }
+  }
 }
 .navLink {
-    text-decoration: none;
-    color: var(--color-grey-2);
-    display: flex;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
+  text-decoration: none;
+  color: var(--color-grey-2);
+  display: flex;
+  gap: vw-1490(5);
+  justify-content: center;
+  align-items: center;
 }
 .shares {
-    color: var(--color-accent-orange);
+  color: var(--color-accent-orange);
 }
 .selectHeader {
-    margin-left: 53px;
-    margin-right: 12px;
+  margin-left: vw-1490(53);
+  margin-right: vw-1490(12);
 }
 
 .profileButton {
-    cursor: pointer;
-    height: 33px;
-    width: 171px;
-    box-sizing: border-box;
-    padding: 0 11px;
+  cursor: pointer;
+  height: vw-1490(33);
+  width: vw-1490(171);
+  box-sizing: border-box;
+  padding: 0 vw-1490(11);
 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    border-radius: 4px;
-    background-color: var(--color-grey-4);
-    color: var(--color-text);
-    text-decoration: none;
-    text-wrap: nowrap;
+  border-radius: 4px;
+  background-color: var(--color-grey-4);
+  color: var(--color-text);
+  text-decoration: none;
+  text-wrap: nowrap;
 
-    &:hover {
-        color: var(--color-accent-orange);
-    }
+  &:hover {
+    color: var(--color-accent-orange);
+  }
 }
 
 .active {
-    color: var(--color-text);
-    text-decoration: underline;
+  color: var(--color-text);
+  text-decoration: underline;
 }
