--- a/src/components/header/header-search/HeaderSearch.module.scss
+++ b/src/components/header/header-search/HeaderSearch.module.scss
@@ -1,19 +1,21 @@
+@import "../../../shared/styles/functions";
+
 .container {
   position: relative;
   box-sizing: border-box;
-  width: 1296px;
-  height: 70px;
+  width: vw-1490(1296);
+  height: vw-1490(70);
 
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: vw-1490(12);
   background-color: var(--color-accent-orange);
   border-radius: 6px;
 
   & > .catalogButton {
-    gap: 10px;
+    gap: vw-1490(10);
     height: 100%;
-    width: 168px;
+    width: vw-1490(168);
     box-sizing: border-box;
     & > p {
       color: var(--color-bg);
@@ -35,27 +37,27 @@
 
 .favorites {
   display: flex;
-  min-width: 144px;
+  min-width: vw-1490(144);
   width: fit-content;
-  height: 70px;
-  gap: 8px;
-  padding: 0 10px;
+  height: vw-1490(70);
+  gap: vw-1490(8);
+  padding: 0 vw-1490(10);
 }
 .shoppingCart {
   display: flex;
-  min-width: 183px;
+  min-width: vw-1490(183);
   width: fit-content;
-  height: 70px;
-  gap: 8px;
-  padding: 0 10px;
+  height: vw-1490(70);
+  gap: vw-1490(8);
+  padding: 0 vw-1490(10);
 
   text-decoration: none;
 }
 
 .iconContainer {
   flex-shrink: 0;
-  width: 48px;
-  height: 48px;
+  width: vw-1490(48);
+  height: vw-1490(48);
 
   display: flex;
   justify-content: center;
@@ -64,23 +66,28 @@
   color: var(--color-text);
   border-radius: 50%;
   background-color: var(--color-bg);
+
+  & > svg {
+    width: vw-1490(28);
+    height: vw-1490(28);
+  }
 }
 
 .textContainer {
   & > h6 {
     font-family: var(--font-rubik);
-    font-size: 16px;
+    font-size: vw-1490(16);
     font-weight: 500;
-    line-height: 22.4px;
+    line-height: vw-1490(22.4);
     text-align: left;
     color: var(--color-bg);
   }
   & > p {
     opacity: 0.7;
     font-family: var(--font-rubik);
-    font-size: 14px;
+    font-size: vw-1490(14);
     font-weight: 400;
-    line-height: 18.2px;
+    line-height: vw-1490(18.2);
     text-align: left;
     color: var(--color-bg);
   }
