--- a/src/components/layouts/main-layout/MainLayout.module.scss
+++ b/src/components/layouts/main-layout/MainLayout.module.scss
@@ -1,23 +1,25 @@
+@import "../../../shared/styles/functions";
+
 .main {
-    position: relative;
-    max-width: 100vw;
-    overflow-x: hidden;
+  position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  width: vw-1490(1296);
+  margin: 0 auto;
+  @media (max-width: 768px) {
     flex-direction: column;
-    width: 1296px;
-    margin: 0 auto;
-    @media (max-width: 768px) {
-        flex-direction: column;
-        width: 100%;
-    }
+    width: 100%;
+  }
 }
 
 .phone {
-    cursor: pointer;
-    position: fixed;
-    right: -50px;
-    top: 0;
+  cursor: pointer;
+  position: fixed;
+  right: vw-1490(-50);
+  top: 0;
 }
