--- a/src/components/login-form-popup/LoginFormPopup.module.scss
+++ b/src/components/login-form-popup/LoginFormPopup.module.scss
@@ -1,137 +1,138 @@
+@import "../../shared/styles/functions";
+
 .overlay {
-    position: fixed;
-    background: #21253180;
-    inset: 0;
-    z-index: 999;
-    overflow-y: auto;
-    animation: fadeIn 0.3s ease-out;
+  position: fixed;
+  background: #21253180;
+  inset: 0;
+  z-index: 999;
+  overflow-y: auto;
+  animation: fadeIn 0.3s ease-out;
 }
 
 .content {
-    box-sizing: border-box;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    
-    display: flex;
-    flex-direction: column;
+  box-sizing: border-box;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
 
-    width: 416px;
-    max-height: 100vh;
-    overflow-y: scroll;
-    padding: 46px 32px;    
+  display: flex;
+  flex-direction: column;
 
-    background-color: var(--color-bg);
-    border-radius: 6px;
+  width: vw-1490(416);
+  max-height: 100vh;
+  overflow-y: scroll;
+  padding: vw-1490(46) vw-1490(32);
 
-    animation: fadeIn 0.3s ease-out;
+  background-color: var(--color-bg);
+  border-radius: 6px;
 
-    &::-webkit-scrollbar{
-        width: 5px;
+  animation: fadeIn 0.3s ease-out;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-grey-4);
+    border-radius: 4px;
+    &:hover {
+      background-color: var(--color-grey-2);
     }
-    
-    &::-webkit-scrollbar-thumb{
-        background-color: var(--color-grey-4);
-        border-radius: 4px;
-        &:hover {
-            background-color: var(--color-grey-2);
-        }
-    }
+  }
 
-    &::-webkit-scrollbar-track{
-        background-color: transparent;
-        border-radius: 4px;
-    }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 4px;
+  }
 
-    @media (max-width: 768px) {
-        width: 336px;
-        padding: 52px 16px 42px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    padding: 52px 16px 42px;
+  }
 }
 
 .nav {
-    display: flex;
-    gap: 12px;
-    justify-content: center;
+  display: flex;
+  gap: vw-1490(12);
+  justify-content: center;
 
-    margin-bottom: 24px;
-    & > button {
-        cursor: pointer;
-        padding: 6px 10px;
+  margin-bottom: vw-1490(24);
+  & > button {
+    cursor: pointer;
+    padding: vw-1490(6) vw-1490(10);
 
-        background-color: var(--color-grey-1);
-        border-radius: 4px;
+    background-color: var(--color-grey-1);
+    border-radius: 4px;
 
-        &.active {
-            color: var(--color-bg);
-            background-color: var(--color-accent-orange);
-        }
+    &.active {
+      color: var(--color-bg);
+      background-color: var(--color-accent-orange);
     }
-    @media (max-width: 768px) {
-        gap: 8px;
-    }
+  }
+  @media (max-width: 768px) {
+    gap: 8px;
+  }
 }
 
 .passwordRecovery {
+  display: flex;
+  flex-direction: column;
+
+  & > h3 {
+    margin-bottom: vw-1490(12);
+    text-align: center;
+  }
+
+  & > p {
+    margin-bottom: vw-1490(24);
+    text-align: center;
+  }
+
+  .inputContainer {
     display: flex;
     flex-direction: column;
+    gap: vw-1490(8);
 
+    margin-bottom: vw-1490(16);
 
-    & > h3 {
-        margin-bottom: 12px;
-        text-align: center;
+    @media (max-width: 768px) {
+      margin-bottom: 24px;
     }
+  }
 
-    & > p {
-        margin-bottom: 24px;
-        text-align: center;
+  .button {
+    margin-bottom: vw-1490(20);
+
+    @media (max-width: 768px) {
+      margin-bottom: 16px;
+      height: 42px;
     }
+  }
 
-    .inputContainer {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        
-        margin-bottom: 16px;
+  .link {
+    text-decoration: underline;
+    width: fit-content;
 
-        @media (max-width: 768px) {
-            margin-bottom: 24px;
-        }
-    }
-    
-    .button {
-        margin-bottom: 20px;
-
-        @media (max-width: 768px) {
-            margin-bottom: 16px;
-            height: 42px;
-        }
-    }
-
-    .link {
-        text-decoration: underline;
-        width: fit-content;
-
-        margin: 0 auto;
-    }
+    margin: 0 auto;
+  }
 }
 
 .closeButton {
-    position: absolute;
-    right: 20px;
-    top: 20px;
+  position: absolute;
+  right: vw-1490(20);
+  top: vw-1490(20);
 
-    margin: 0;
-    outline: none;
+  margin: 0;
+  outline: none;
 }
 
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
