--- a/src/components/login-form-popup/registration/Registration.module.scss
+++ b/src/components/login-form-popup/registration/Registration.module.scss
@@ -1,32 +1,34 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
 
+  & > button {
+    height: vw-1490(58);
+  }
+
+  @media (max-width: 768px) {
     & > button {
-        height: 58px;
+      height: 42px;
     }
-
-    @media (max-width: 768px) {
-        & > button {
-            height: 42px;
-        }
-    }
+  }
 }
 
-.inputContainer{
-    display: flex;
-    flex-direction: column;
+.inputContainer {
+  display: flex;
+  flex-direction: column;
 
-    gap: 8px;
+  gap: vw-1490(8);
 
-    @media (max-width: 768px) {
-        gap: 6px;
-    }
+  @media (max-width: 768px) {
+    gap: 6px;
+  }
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(16);
 }
