--- a/src/components/slider/Slider.module.scss
+++ b/src/components/slider/Slider.module.scss
@@ -1,45 +1,47 @@
-.container{
-    position: relative;
-    width: 1296px;
+@import "../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        width: 336px;
-    }
+.container {
+  position: relative;
+  width: vw-1490(1296);
+
+  @media (max-width: 768px) {
+    width: 336px;
+  }
 }
 
 .itemsContainer {
-    width: 100%;
-    display: flex;
-    gap: 24px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    scroll-behavior: smooth;
-    &::-webkit-scrollbar {
-        display: none;
-    }
+  width: 100%;
+  display: flex;
+  gap: 24px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-.iconLeft{
-    position: absolute;
-    left: -76px;
-    top: 50%;
-    transform: translateY(-50%);
+.iconLeft {
+  position: absolute;
+  left: -76px;
+  top: 50%;
+  transform: translateY(-50%);
 
-    & > svg {
-        width: 22px;
-        height: 22px;
-    }
+  & > svg {
+    width: 22px;
+    height: 22px;
+  }
 }
 
-.iconRight{
-    position: absolute;
-    right: -76px;   
+.iconRight {
+  position: absolute;
+  right: -76px;
 
-    top: 50%;
-    transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 
-    & > svg {
-        width: 22px;
-        height: 22px;
-    }
+  & > svg {
+    width: 22px;
+    height: 22px;
+  }
 }
