--- a/src/components/work-process/WorkProcess.module.scss
+++ b/src/components/work-process/WorkProcess.module.scss
@@ -1,61 +1,64 @@
+@import "../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 
-    & > h2 {
-        text-align: center;
-    }
+  & > h2 {
+    text-align: center;
+  }
 
-    @media (max-width: 768px) {
-        gap: 24px;
-    }
+  @media (max-width: 768px) {
+    gap: 24px;
+  }
 }
 
 .cardsContainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 32px 24px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: vw-1490(24);
 
-    @media (max-width: 768px) {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-    }
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
 }
 
 .card {
-    position: relative;
-    width: 306px;
-    height: 369px;
-    box-sizing: border-box;
+  position: relative;
+  width: vw-1490(306);
+  height: vw-1490(369);
+  box-sizing: border-box;
+  padding: vw-1490(24);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  background-color: var(--color-bg);
+  border-radius: 6px;
+  box-shadow: 6px 12px 13px 0px #2225310a;
+
+  & > h2 {
+    color: var(--color-accent-orange);
+    margin-bottom: 76px;
+  }
+
+  & > h3 {
+    margin-bottom: 8px;
+  }
+
+  & > svg {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    height: 214px;
     padding: 24px;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    background-color: var(--color-bg);
-    border-radius: 6px;
-    box-shadow: 6px 12px 13px 0px #2225310A;
-
-    & > h2 {
-        color: var(--color-accent-orange);
-        margin-bottom: 76px;
-    }
-
-    & > h3 {
-        margin-bottom: 8px;
-    }
-
-    & > svg {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        height: 214px;    
-    }
+  }
 }
