--- a/src/features/Profile/my-addresses/MyAddresses.module.scss
+++ b/src/features/Profile/my-addresses/MyAddresses.module.scss
@@ -27,7 +27,7 @@
 
 .radioAddress {
   & > div {
-    height: vw-1490(143);
+    height: 143px;
     width: vw-1490(460);
     & > div {
       max-width: 100%;
@@ -40,10 +40,11 @@
 }
 
 .button {
-  width: vw-1490(230);
-  height: vw-1490(58);
+  width: 230px;
+  height: 58px;
   @media (max-width: 768px) {
     width: 100%;
+    height: 42px;
   }
 }
 
