--- a/src/features/Profile/profile-page/ProfilePage.module.scss
+++ b/src/features/Profile/profile-page/ProfilePage.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: vw-1490(36);
+  gap: 36px;
 
   margin-bottom: vw-1490(140);
   & > h1 {
@@ -29,14 +29,15 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   text-align: left;
-  gap: vw-1490(12);
+  gap: 12px;
 
   text-decoration: none;
   border-radius: 6px;
-  padding: vw-1490(16) vw-1490(12);
+  padding: 16px 12px;
   & > h4 {
-    width: vw-1490(248);
+    max-width: 248px;
   }
 
   @media (max-width: 768px) {
@@ -49,8 +50,8 @@
 }
 
 .iconCategory {
-  width: vw-1490(22);
-  height: vw-1490(22);
+  width: 22px;
+  height: 22px;
   flex-shrink: 0;
 }
 
