--- a/src/features/Profile/profile-personal-data/ProfilePersonalData.module.scss
+++ b/src/features/Profile/profile-personal-data/ProfilePersonalData.module.scss
@@ -59,6 +59,7 @@
   @media (max-width: 768px) {
     margin: 0;
     width: 100%;
+    height: 42px;
   }
 }
 
@@ -68,6 +69,7 @@
 
   @media (max-width: 768px) {
     margin: 0;
+    height: 42px;
     width: 100%;
   }
 }
