--- a/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
+++ b/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
@@ -22,6 +22,9 @@
   width: vw-1490(306);
   display: flex;
   flex-direction: column;
+  & > a:hover > svg {
+    color: var(--color-accent-orange);
+  }
   @media (max-width: 768px) {
     width: 336px;
   }
@@ -33,9 +36,9 @@
   text-decoration: none;
 
   border-radius: 6px;
-  padding: vw-1490(16) vw-1490(12);
+  padding: 16px 12px;
   & > h4 {
-    width: vw-1490(248);
+    width: 100%;
   }
 
   &:hover {
@@ -45,8 +48,8 @@
 }
 
 .iconCategory {
-  width: vw-1490(22);
-  height: vw-1490(22);
+  width: 22px;
+  height: 22px;
   flex-shrink: 0;
 }
 
