--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -1,23 +1,24 @@
 @import "../../../shared/styles/variables";
+@import "../../../shared/styles/functions";
 
 .button {
   cursor: pointer;
 
-  width: 196px;
-  height: 48px;
+  width: vw-1490(196);
+  height: vw-1490(48);
   display: flex;
   align-items: center;
   justify-content: center;
 
   color: var(--color-bg);
   font-family: var(--font-rubik);
-  font-size: 20px;
+  font-size: vw-1490(20);
   font-weight: 400;
-  line-height: 28px;
+  line-height: vw-1490(28);
   text-decoration: none;
 
   box-sizing: border-box;
-  padding: 10px 12px;
+  padding: vw-1490(10) vw-1490(12);
   outline: none;
   border: none;
   border-radius: 4px;
@@ -28,6 +29,8 @@
   }
 
   @media (max-width: 768px) {
+    width: 196px;
+    height: 48px;
     font-size: 16px;
     font-weight: 400;
     line-height: 22.4px;
