--- a/src/shared/ui/text-field/TextField.module.scss
+++ b/src/shared/ui/text-field/TextField.module.scss
@@ -1,4 +1,5 @@
 @import "../../../shared/styles/variables";
+@import "../../../shared/styles/functions";
 
 .container {
   display: flex;
@@ -19,16 +20,21 @@
 .iconSearch {
   position: absolute;
   top: 50%;
-  left: 16px;
+  left: vw-1490(16);
   transform: translateY(-50%);
 
   display: flex;
   align-items: center;
 
-  width: 26px;
-  height: 26px;
+  width: vw-1490(26);
+  height: vw-1490(26);
 
   color: var(--color-text);
+
+  @media (max-width: 768px) {
+    width: 26px;
+    height: 26px;
+  }
 }
 
 .input {
@@ -36,13 +42,13 @@
 
   box-sizing: border-box;
   width: 100%;
-  height: 50px;
-  padding: 16px;
+  height: vw-1490(50);
+  padding: vw-1490(16);
 
   font-family: var(--font-rubik);
-  font-size: 16px;
+  font-size: vw-1490(16);
   font-weight: 400;
-  line-height: 18.96px;
+  line-height: vw-1490(19);
 
   border: 1px solid #2125311a;
   background-color: #ffffff;
@@ -55,20 +61,22 @@
   }
 
   &.search {
-    padding-left: 52px;
+    padding-left: vw-1490(52);
   }
 
   @media (max-width: $mobile) {
     font-size: 16px;
     font-weight: 400;
     line-height: 22.4px;
+    height: 50px;
+    padding: 16px;
   }
 }
 
 .placeholder {
-  font-size: 16px;
+  font-size: vw-1490(16);
   font-weight: 400;
-  line-height: 18.96px;
+  line-height: vw-1490(19);
 
   position: absolute;
   top: 50%;
@@ -91,7 +99,7 @@
 
   position: absolute;
   top: 50%;
-  right: 16px;
+  right: vw-1490(16);
   transform: translateY(-50%);
 
   display: none;
